# trait

./: .gitmodules  CMakeDependentCacheVar.cmake  CMakeLists.txt  README.md  Sanitizers.cmake  shaclConfig.cmake
.cmake/tests/: CMakeLists.txt
.cmake/tests/Fortran/Standard/: terminal_output_GNU  terminal_output_Intel  terminal_output_Intel_win32  terminal_output_PGI
.cmake/tests/Warnings/: CMakeLists.txt
include/shacl/trait/: CMakeLists.txt  Compound.hpp  Conjunction.hpp  DereferenceResult.hpp  Difference.hpp  Disjunction.hpp  DivisionDefined.hpp  GreaterThanDefined.hpp  HasType.hpp  InvokeNoThrow.hpp  IsReferenceWrapper.hpp  LessThanDefined.hpp  LessThanEqualDefined.hpp  LessThanEqualResult.hpp  MultiplicationDefined.hpp  Product.hpp  Quotient.hpp  SubscriptResult.hpp  Sum.hpp  SwapDefined.hpp  SwapNoThrow.hpp  getterResult.hpp  void_t.hpp
include/shacl/trait/AdditionDefined/test/: CMakeLists.txt
include/shacl/trait/Arithmetic/test/: Arithmetic.test.cpp
include/shacl/trait/Compound/test/: get.test.cpp
include/shacl/trait/Conjunction/test/: Conjunction.test.cpp
include/shacl/trait/DereferenceResult/test/: CMakeLists.txt
include/shacl/trait/Difference/test/: CMakeLists.txt
include/shacl/trait/DivisionDefined/test/: CMakeLists.txt
include/shacl/trait/EqualityComparable/test/: CMakeLists.txt  EqualityComparable.test.cpp
include/shacl/trait/EqualityResult/test/: CMakeLists.txt
include/shacl/trait/GreaterThanDefined/test/: GreaterThanDefined.test.cpp
include/shacl/trait/GreaterThanEqualResult/test/: CMakeLists.txt
include/shacl/trait/HasType/test/: CMakeLists.txt  HasType.test.cpp
include/shacl/trait/InequalityDefined/test/: CMakeLists.txt  InequalityDefined.test.cpp
include/shacl/trait/InequalityResult/test/: CMakeLists.txt
include/shacl/trait/InvokeResult/test/: CMakeLists.txt
include/shacl/trait/IsInteger/test/: CMakeLists.txt  IsInteger.test.cpp
include/shacl/trait/LessThanDefined/test/: LessThanDefined.test.cpp  SupportsLessThan.test.cpp
include/shacl/trait/LessThanEqualDefined/test/: CMakeLists.txt
include/shacl/trait/LessThanResult/test/: CMakeLists.txt  LessThanResult.test.cpp
include/shacl/trait/MultiplicationDefined/test/: MultiplicationDefined.test.cpp
include/shacl/trait/Quotient/test/: Quotient.test.cpp
include/shacl/trait/Scalable/test/: CMakeLists.txt  Scalable.test.cpp
include/shacl/trait/SubscriptResult/test/: CMakeLists.txt
include/shacl/trait/SubtractionDefined/test/: SubtractionDefined.test.cpp
include/shacl/trait/SwapNoThrow/test/: SwapNoThrow.test.cpp
include/shacl/trait/getterResult/test/: CMakeLists.txt
src/shacl/trait/: AdditionDefined.hpp  Arithmetic.hpp  CMakeLists.txt  Comparable.hpp  Compound.hpp  ConditionalApplication.hpp  Conjunction.hpp  DereferenceDefined.hpp  DereferenceResult.hpp  Dereferenced.hpp  Difference.hpp  Disjunction.hpp  DivisionDefined.hpp  EqualityComparable.hpp  EqualityDefined.hpp  EqualityResult.hpp  GreaterThanDefined.hpp  GreaterThanEqualDefined.hpp  GreaterThanEqualResult.hpp  GreaterThanResult.hpp  HasType.hpp  Identity.hpp  InequalityDefined.hpp  InequalityResult.hpp  InvokeDefined.hpp  InvokeNoThrow.hpp  InvokeResult.hpp  IsInteger.hpp  IsRange.hpp  IsReferenceWrapper.hpp  LessThanDefined.hpp  LessThanEqualDefined.hpp  LessThanResult.hpp  MultiplicationDefined.hpp  Negate.hpp  Product.hpp  Quotient.hpp  RangeTraits.hpp  Scalable.hpp  SubscriptDefined.hpp  (+7 more)
src/shacl/trait/AdditionDefined/test/: AdditionDefined.test.cpp
src/shacl/trait/Arithmetic/test/: CMakeLists.txt
src/shacl/trait/Comparable/test/: CMakeLists.txt  Comparable.test.cpp
src/shacl/trait/Compound/test/: CMakeLists.txt  Compound.test.cpp
src/shacl/trait/ConditionalApplication/test/: CMakeLists.txt  ConditionalApplication.test.cpp
src/shacl/trait/Conjunction/test/: CMakeLists.txt
src/shacl/trait/DereferenceDefined/test/: CMakeLists.txt  DereferenceDefined.test.cpp
src/shacl/trait/DereferenceResult/test/: DereferenceResult.test.cpp
src/shacl/trait/Dereferenced/test/: CMakeLists.txt  Dereferenced.test.cpp
src/shacl/trait/Difference/test/: Difference.test.cpp
src/shacl/trait/Disjunction/test/: CMakeLists.txt  Disjunction.test.cpp
src/shacl/trait/DivisionDefined/test/: DivisionDefined.test.cpp
src/shacl/trait/EqualityComparable/test/: EqualityComparable.test.cpp
src/shacl/trait/EqualityDefined/test/: CMakeLists.txt  EqualityDefined.test.cpp
src/shacl/trait/EqualityResult/test/: EqualityResult.test.cpp
src/shacl/trait/GreaterThanDefined/test/: CMakeLists.txt
src/shacl/trait/GreaterThanEqualDefined/test/: CMakeLists.txt  GreaterThanEqualDefined.test.cpp
src/shacl/trait/GreaterThanEqualResult/test/: GreaterThanEqualResult.test.cpp
src/shacl/trait/GreaterThanResult/test/: CMakeLists.txt  GreaterThanResult.test.cpp
src/shacl/trait/HasType/test/: CMakeLists.txt  HasType.test.cpp
src/shacl/trait/Identity/test/: CMakeLists.txt  Identity.test.cpp
src/shacl/trait/InequalityResult/test/: InequalityResult.test.cpp
src/shacl/trait/InvokeDefined/test/: CMakeLists.txt  InvokeDefined.test.cpp
src/shacl/trait/InvokeNoThrow/test/: CMakeLists.txt  InvokeNoThrow.test.cpp
src/shacl/trait/InvokeResult/test/: InvokeResult.test.cpp
src/shacl/trait/IsRange/test/: .#IsRange.test.cpp  CMakeLists.txt  IsRange.test.cpp
src/shacl/trait/LessThanDefined/test/: CMakeLists.txt
src/shacl/trait/LessThanEqualDefined/test/: LessThanEqualDefined.test.cpp
src/shacl/trait/LessThanEqualResult/test/: CMakeLists.txt  LessThanEqualResult.test.cpp
src/shacl/trait/LesserThanEqualDefined/test/: LesserThanEqualDefined.test.cpp
src/shacl/trait/MultiplicationDefined/test/: CMakeLists.txt
src/shacl/trait/Negate/test/: CMakeLists.txt  Negate.test.cpp
src/shacl/trait/Product/test/: CMakeLists.txt  Product.test.cpp
src/shacl/trait/Quotient/test/: CMakeLists.txt  Quotient.test.cpp
src/shacl/trait/RangeTraits/test/: CMakeLists.txt  RangeTraits.test.cpp
src/shacl/trait/detail/: INVOKE.hpp
tests/Fortran/ModuleDirectory/: CMakeLists.txt
tests/Fortran/Standard/: CMakeLists.txt  use_standard.f90.in
(+44 files in other folders)
