target_sources(trait INTERFACE
  $<BUILD_INTERFACE:
    ${CMAKE_CURRENT_SOURCE_DIR}/LessThanDefined.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/LessThanEqualDefined.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/GreaterThanDefined.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/GreaterThanEqualDefined.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/EqualityDefined.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/InequalityDefined.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Comparable.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/AdditionDefined.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/SubtractionDefined.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/MultiplicationDefined.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/DivisionDefined.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Scalable.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Arithmetic.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/IsRange.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/InvokeDefined.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/DereferenceDefined.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Dereferenced.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/RangeTraits.hpp>
  $<INSTALL_INTERFACE:
    include/shacl/trait/LessThanDefined.hpp
    include/shacl/trait/LessThanEqualDefined.hpp
    include/shacl/trait/GreaterThanDefined.hpp
    include/shacl/trait/GreaterThanEqualDefined.hpp
    include/shacl/trait/EqualityDefined.hpp
    include/shacl/trait/InequalityDefined.hpp
    include/shacl/trait/Comparable.hpp
    include/shacl/trait/AdditionDefined.hpp
    include/shacl/trait/SubtractionDefined.hpp
    include/shacl/trait/MultiplicationDefined.hpp
    include/shacl/trait/DivisionDefined.hpp
    include/shacl/trait/Scalable.hpp
    include/shacl/trait/Arithmetic.hpp
    include/shacl/trait/IsRange.hpp
    include/shacl/trait/InvokeDefined.hpp
    include/shacl/trait/DereferenceDefined.hpp
    include/shacl/trait/Dereferenced.hpp
    include/shacl/trait/RangeTraits.hpp>)

if(trait.tests)
  add_subdirectory(LessThanDefined/test)
  add_subdirectory(LessThanEqualDefined/test)
  add_subdirectory(GreaterThanDefined/test)
  add_subdirectory(GreaterThanEqualDefined/test)
  add_subdirectory(EqualityDefined/test)
  add_subdirectory(InequalityDefined/test)
  add_subdirectory(Comparable/test)
  add_subdirectory(AdditionDefined/test)
  add_subdirectory(SubtractionDefined/test)
  add_subdirectory(MultiplicationDefined/test)
  add_subdirectory(DivisionDefined/test)
  add_subdirectory(Scalable/test)
  add_subdirectory(Arithmetic/test)
  add_subdirectory(IsRange/test)
  add_subdirectory(InvokeDefined/test)
  add_subdirectory(DereferenceDefined/test)
  add_subdirectory(Dereferenced/test)
  add_subdirectory(RangeTraits/test)
endif()
