target_sources(trait INTERFACE
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/AdditionDefined.hpp>
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/Arithmetic.hpp>
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/Comparable.hpp>
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/Compound.hpp>
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/ConditionalApplication.hpp>
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/Conjunction.hpp>
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/DereferenceDefined.hpp>
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/DereferenceResult.hpp>
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/Difference.hpp>
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/Disjunction.hpp>
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/DivisionDefined.hpp>
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/EqualityComparable.hpp>
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/EqualityDefined.hpp>
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/getterResult.hpp>
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/GreaterThanDefined.hpp>
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/GreaterThanEqualDefined.hpp>
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/HasType.hpp>
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/Identity.hpp>
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/InequalityDefined.hpp>
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/InvokeDefined.hpp>
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/InvokeNoThrow.hpp>
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/InvokeResult.hpp>
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/IsInteger.hpp>
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/IsRange.hpp>
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/LessThanDefined.hpp>
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/LessThanEqualDefined.hpp>
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/MultiplicationDefined.hpp>
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/Negate.hpp>
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/Product.hpp>
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/Quotient.hpp>
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/RangeTraits.hpp>
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/Scalable.hpp>
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/SubtractionDefined.hpp>
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/SubscriptDefined.hpp>
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/SubscriptResult.hpp>
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/Sum.hpp>
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/Sum.hpp>
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/SwapDefined.hpp>
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/SwapNoThrow.hpp>
  $<INSTALL_INTERFACE:include/shacl/trait/AdditionDefined.hpp>
  $<INSTALL_INTERFACE:include/shacl/trait/Arithmetic.hpp>
  $<INSTALL_INTERFACE:include/shacl/trait/Comparable.hpp>
  $<INSTALL_INTERFACE:include/shacl/trait/Compound.hpp>
  $<INSTALL_INTERFACE:include/shacl/trait/ConditionalApplication.hpp>
  $<INSTALL_INTERFACE:include/shacl/trait/Conjunction.hpp>
  $<INSTALL_INTERFACE:include/shacl/trait/DereferenceDefined.hpp>
  $<INSTALL_INTERFACE:include/shacl/trait/DereferenceResult.hpp>
  $<INSTALL_INTERFACE:include/shacl/trait/Disjunction.hpp>
  $<INSTALL_INTERFACE:include/shacl/trait/Difference.hpp>
  $<INSTALL_INTERFACE:include/shacl/trait/DivisionDefined.hpp>
  $<INSTALL_INTERFACE:include/shacl/trait/EqualityComparable.hpp>
  $<INSTALL_INTERFACE:include/shacl/trait/EqualityDefined.hpp>
  $<INSTALL_INTERFACE:include/shacl/trait/getterResult.hpp>
  $<INSTALL_INTERFACE:include/shacl/trait/GreaterThanDefined.hpp>
  $<INSTALL_INTERFACE:include/shacl/trait/GreaterThanEqualDefined.hpp>
  $<INSTALL_INTERFACE:include/shacl/trait/HasType.hpp>
  $<INSTALL_INTERFACE:include/shacl/trait/Identity.hpp>
  $<INSTALL_INTERFACE:include/shacl/trait/InequalityDefined.hpp>
  $<INSTALL_INTERFACE:include/shacl/trait/InvokeDefined.hpp>
  $<INSTALL_INTERFACE:include/shacl/trait/InvokeNoThrow.hpp>
  $<INSTALL_INTERFACE:include/shacl/trait/InvokeResult.hpp>
  $<INSTALL_INTERFACE:include/shacl/trait/IsInteger.hpp>
  $<INSTALL_INTERFACE:include/shacl/trait/IsRange.hpp>
  $<INSTALL_INTERFACE:include/shacl/trait/LessThanDefined.hpp>
  $<INSTALL_INTERFACE:include/shacl/trait/LessThanEqualDefined.hpp>
  $<INSTALL_INTERFACE:include/shacl/trait/MultiplicationDefined.hpp>
  $<INSTALL_INTERFACE:include/shacl/trait/Negate.hpp>
  $<INSTALL_INTERFACE:include/shacl/trait/Product.hpp>
  $<INSTALL_INTERFACE:include/shacl/trait/Quotient.hpp>
  $<INSTALL_INTERFACE:include/shacl/trait/RangeTraits.hpp>
  $<INSTALL_INTERFACE:include/shacl/trait/Scalable.hpp>
  $<INSTALL_INTERFACE:include/shacl/trait/SubtractionDefined.hpp>
  $<INSTALL_INTERFACE:include/shacl/trait/SubscriptDefined.hpp>
  $<INSTALL_INTERFACE:include/shacl/trait/SubscriptResult.hpp>
  $<INSTALL_INTERFACE:include/shacl/trait/Sum.hpp>
  $<INSTALL_INTERFACE:include/shacl/trait/Sum.hpp>
  $<INSTALL_INTERFACE:include/shacl/trait/SwapDefined.hpp>
  $<INSTALL_INTERFACE:include/shacl/trait/SwapNoThrow.hpp>)

if(trait.tests)
  add_subdirectory(AdditionDefined/test)
  add_subdirectory(Arithmetic/test)
  add_subdirectory(Comparable/test)
  add_subdirectory(Compound/test)
  add_subdirectory(ConditionalApplication/test)
  add_subdirectory(Conjunction/test)
  add_subdirectory(DereferenceDefined/test)
  add_subdirectory(DereferenceResult/test)
  add_subdirectory(Difference/test)
  add_subdirectory(Disjunction/test)
  add_subdirectory(DivisionDefined/test)
  add_subdirectory(EqualityComparable/test)
  add_subdirectory(EqualityDefined/test)
  add_subdirectory(EqualityResult/test)
  add_subdirectory(getterResult/test)
  add_subdirectory(GreaterThanDefined/test)
  add_subdirectory(GreaterThanEqualDefined/test)
  add_subdirectory(GreaterThanResult/test)
  add_subdirectory(GreaterThanEqualResult/test)
  add_subdirectory(HasType/test)
  add_subdirectory(Identity/test)
  add_subdirectory(InequalityDefined/test)
  add_subdirectory(InequalityResult/test)
  add_subdirectory(InvokeDefined/test)
  add_subdirectory(InvokeNoThrow/test)
  add_subdirectory(InvokeResult/test)
  add_subdirectory(IsInteger/test)
  add_subdirectory(IsRange/test)
  add_subdirectory(LessThanDefined/test)
  add_subdirectory(LessThanEqualDefined/test)
  add_subdirectory(LessThanResult/test)
  add_subdirectory(LessThanEqualResult/test)
  add_subdirectory(MultiplicationDefined/test)
  add_subdirectory(Negate/test)
  add_subdirectory(Product/test)
  add_subdirectory(Quotient/test)
  add_subdirectory(RangeTraits/test)
  add_subdirectory(Scalable/test)
  add_subdirectory(SubtractionDefined/test)
  add_subdirectory(SubscriptDefined/test)
  add_subdirectory(SubscriptResult/test)
  add_subdirectory(Sum/test)
  add_subdirectory(SwapDefined/test)
  add_subdirectory(SwapNoThrow/test)
endif()
